--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div id="about-container">
     <div id="brand">
-        <img src="img/saasweeklogo.png" alt="Saas Week">
-        <h1>Saas Week</h1>
+        <img src="img/saasweeklogo.png" alt="SaaS Week">
+        <h1>SaaS Week</h1>
     </div>
     <p id="exclusive">Webinar Exclusivo</p>
     <h2>Aprenda a criar um Software para gerar renda</h2>
